@@ -1,4 +1,6 @@
 FlightCrew v0.7.2 ADD_DATE
+    - fixed an issue with "src" declarations in @font-face rules that have a space before the colon
+    throwing error messages about unreachable files (issue #21)
     - clarified what "reachable" means in the error messages 
 
 FlightCrew v0.7.1 2010.11.11.
